# public/docs/openapi.yaml
@@ -23,18 +23,381 @@ paths:
             schema:
               type: object
               properties:
-                username:
+                nip:
                   type: string
                   description: ''
-                  example: admin
+                  example: '2121021210'
                 password:
                   type: string
                   description: ''
                   example: password123
               required:
-                - username
+                - nip
                 - password
       security: []
+  /api/v1/users:
+    get:
+      summary: 'Display a listing of the resource.'
+      operationId: displayAListingOfTheResource
+      description: ''
+      parameters: []
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  current_page: 1
+                  data:
+                    -
+                      id: 1
+                      name: 'Patsy Zemlak'
+                      username: spinka.hal
+                      email_verified_at: null
+                      created_at: '2024-06-17T17:24:35.000000Z'
+                      updated_at: '2024-06-17T17:24:35.000000Z'
+                    -
+                      id: 2
+                      name: 'Prof. Veda Kub III'
+                      username: renner.tatum
+                      email_verified_at: null
+                      created_at: '2024-06-17T17:24:35.000000Z'
+                      updated_at: '2024-06-17T17:24:35.000000Z'
+                    -
+                      id: 3
+                      name: 'Bessie Stokes'
+                      username: oryan
+                      email_verified_at: null
+                      created_at: '2024-06-17T17:24:35.000000Z'
+                      updated_at: '2024-06-17T17:24:35.000000Z'
+                    -
+                      id: 4
+                      name: 'Desiree Kuhlman'
+                      username: vena03
+                      email_verified_at: null
+                      created_at: '2024-06-17T17:24:35.000000Z'
+                      updated_at: '2024-06-17T17:24:35.000000Z'
+                    -
+                      id: 5
+                      name: 'Mr. Nolan Doyle'
+                      username: okey62
+                      email_verified_at: null
+                      created_at: '2024-06-17T17:24:35.000000Z'
+                      updated_at: '2024-06-17T17:24:35.000000Z'
+                    -
+                      id: 6
+                      name: 'Prof. Vilma Breitenberg MD'
+                      username: gottlieb.dimitri
+                      email_verified_at: null
+                      created_at: '2024-06-17T17:24:35.000000Z'
+                      updated_at: '2024-06-17T17:24:35.000000Z'
+                    -
+                      id: 7
+                      name: 'Antonietta Blick'
+                      username: nbreitenberg
+                      email_verified_at: null
+                      created_at: '2024-06-17T17:24:36.000000Z'
+                      updated_at: '2024-06-17T17:24:36.000000Z'
+                    -
+                      id: 8
+                      name: 'Stephanie McCullough'
+                      username: ckunze
+                      email_verified_at: null
+                      created_at: '2024-06-17T17:24:36.000000Z'
+                      updated_at: '2024-06-17T17:24:36.000000Z'
+                    -
+                      id: 9
+                      name: 'Cristina Schoen II'
+                      username: odurgan
+                      email_verified_at: null
+                      created_at: '2024-06-17T17:24:36.000000Z'
+                      updated_at: '2024-06-17T17:24:36.000000Z'
+                    -
+                      id: 10
+                      name: 'Carole Mraz'
+                      username: rosemary71
+                      email_verified_at: null
+                      created_at: '2024-06-17T17:24:36.000000Z'
+                      updated_at: '2024-06-17T17:24:36.000000Z'
+                    -
+                      id: 11
+                      name: 'admin 1'
+                      username: admin
+                      email_verified_at: null
+                      created_at: '2024-06-17T17:24:36.000000Z'
+                      updated_at: '2024-06-17T17:24:36.000000Z'
+                  first_page_url: 'http://localhost:8000/api/v1/users?page=1'
+                  from: 1
+                  last_page: 1
+                  last_page_url: 'http://localhost:8000/api/v1/users?page=1'
+                  links:
+                    -
+                      url: null
+                      label: '&laquo; Previous'
+                      active: false
+                    -
+                      url: 'http://localhost:8000/api/v1/users?page=1'
+                      label: '1'
+                      active: true
+                    -
+                      url: null
+                      label: 'Next &raquo;'
+                      active: false
+                  next_page_url: null
+                  path: 'http://localhost:8000/api/v1/users'
+                  per_page: 15
+                  prev_page_url: null
+                  to: 11
+                  total: 11
+                properties:
+                  current_page:
+                    type: integer
+                    example: 1
+                  data:
+                    type: array
+                    example:
+                      -
+                        id: 1
+                        name: 'Patsy Zemlak'
+                        username: spinka.hal
+                        email_verified_at: null
+                        created_at: '2024-06-17T17:24:35.000000Z'
+                        updated_at: '2024-06-17T17:24:35.000000Z'
+                      -
+                        id: 2
+                        name: 'Prof. Veda Kub III'
+                        username: renner.tatum
+                        email_verified_at: null
+                        created_at: '2024-06-17T17:24:35.000000Z'
+                        updated_at: '2024-06-17T17:24:35.000000Z'
+                      -
+                        id: 3
+                        name: 'Bessie Stokes'
+                        username: oryan
+                        email_verified_at: null
+                        created_at: '2024-06-17T17:24:35.000000Z'
+                        updated_at: '2024-06-17T17:24:35.000000Z'
+                      -
+                        id: 4
+                        name: 'Desiree Kuhlman'
+                        username: vena03
+                        email_verified_at: null
+                        created_at: '2024-06-17T17:24:35.000000Z'
+                        updated_at: '2024-06-17T17:24:35.000000Z'
+                      -
+                        id: 5
+                        name: 'Mr. Nolan Doyle'
+                        username: okey62
+                        email_verified_at: null
+                        created_at: '2024-06-17T17:24:35.000000Z'
+                        updated_at: '2024-06-17T17:24:35.000000Z'
+                      -
+                        id: 6
+                        name: 'Prof. Vilma Breitenberg MD'
+                        username: gottlieb.dimitri
+                        email_verified_at: null
+                        created_at: '2024-06-17T17:24:35.000000Z'
+                        updated_at: '2024-06-17T17:24:35.000000Z'
+                      -
+                        id: 7
+                        name: 'Antonietta Blick'
+                        username: nbreitenberg
+                        email_verified_at: null
+                        created_at: '2024-06-17T17:24:36.000000Z'
+                        updated_at: '2024-06-17T17:24:36.000000Z'
+                      -
+                        id: 8
+                        name: 'Stephanie McCullough'
+                        username: ckunze
+                        email_verified_at: null
+                        created_at: '2024-06-17T17:24:36.000000Z'
+                        updated_at: '2024-06-17T17:24:36.000000Z'
+                      -
+                        id: 9
+                        name: 'Cristina Schoen II'
+                        username: odurgan
+                        email_verified_at: null
+                        created_at: '2024-06-17T17:24:36.000000Z'
+                        updated_at: '2024-06-17T17:24:36.000000Z'
+                      -
+                        id: 10
+                        name: 'Carole Mraz'
+                        username: rosemary71
+                        email_verified_at: null
+                        created_at: '2024-06-17T17:24:36.000000Z'
+                        updated_at: '2024-06-17T17:24:36.000000Z'
+                      -
+                        id: 11
+                        name: 'admin 1'
+                        username: admin
+                        email_verified_at: null
+                        created_at: '2024-06-17T17:24:36.000000Z'
+                        updated_at: '2024-06-17T17:24:36.000000Z'
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                          example: 1
+                        name:
+                          type: string
+                          example: 'Patsy Zemlak'
+                        username:
+                          type: string
+                          example: spinka.hal
+                        email_verified_at:
+                          type: string
+                          example: null
+                        created_at:
+                          type: string
+                          example: '2024-06-17T17:24:35.000000Z'
+                        updated_at:
+                          type: string
+                          example: '2024-06-17T17:24:35.000000Z'
+                  first_page_url:
+                    type: string
+                    example: 'http://localhost:8000/api/v1/users?page=1'
+                  from:
+                    type: integer
+                    example: 1
+                  last_page:
+                    type: integer
+                    example: 1
+                  last_page_url:
+                    type: string
+                    example: 'http://localhost:8000/api/v1/users?page=1'
+                  links:
+                    type: array
+                    example:
+                      -
+                        url: null
+                        label: '&laquo; Previous'
+                        active: false
+                      -
+                        url: 'http://localhost:8000/api/v1/users?page=1'
+                        label: '1'
+                        active: true
+                      -
+                        url: null
+                        label: 'Next &raquo;'
+                        active: false
+                    items:
+                      type: object
+                      properties:
+                        url:
+                          type: string
+                          example: null
+                        label:
+                          type: string
+                          example: '&laquo; Previous'
+                        active:
+                          type: boolean
+                          example: false
+                  next_page_url:
+                    type: string
+                    example: null
+                  path:
+                    type: string
+                    example: 'http://localhost:8000/api/v1/users'
+                  per_page:
+                    type: integer
+                    example: 15
+                  prev_page_url:
+                    type: string
+                    example: null
+                  to:
+                    type: integer
+                    example: 11
+                  total:
+                    type: integer
+                    example: 11
+      tags:
+        - Endpoints
+      security: []
+    post:
+      summary: 'Store a newly created resource in storage.'
+      operationId: storeANewlyCreatedResourceInStorage
+      description: ''
+      parameters: []
+      responses: {  }
+      tags:
+        - Endpoints
+      security: []
+  '/api/v1/users/{username}':
+    get:
+      summary: 'Display the specified resource.'
+      operationId: displayTheSpecifiedResource
+      description: ''
+      parameters: []
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  data:
+                    id: 1
+                    name: 'Patsy Zemlak'
+                    username: spinka.hal
+                    email_verified_at: null
+                    created_at: '2024-06-17T17:24:35.000000Z'
+                    updated_at: '2024-06-17T17:24:35.000000Z'
+                properties:
+                  data:
+                    type: object
+                    properties:
+                      id:
+                        type: integer
+                        example: 1
+                      name:
+                        type: string
+                        example: 'Patsy Zemlak'
+                      username:
+                        type: string
+                        example: spinka.hal
+                      email_verified_at:
+                        type: string
+                        example: null
+                      created_at:
+                        type: string
+                        example: '2024-06-17T17:24:35.000000Z'
+                      updated_at:
+                        type: string
+                        example: '2024-06-17T17:24:35.000000Z'
+      tags:
+        - Endpoints
+      security: []
+    put:
+      summary: 'Update the specified resource in storage.'
+      operationId: updateTheSpecifiedResourceInStorage
+      description: ''
+      parameters: []
+      responses: {  }
+      tags:
+        - Endpoints
+      security: []
+    delete:
+      summary: 'Remove the specified resource from storage.'
+      operationId: removeTheSpecifiedResourceFromStorage
+      description: ''
+      parameters: []
+      responses: {  }
+      tags:
+        - Endpoints
+      security: []
+    parameters:
+      -
+        in: path
+        name: username
+        description: ''
+        example: spinka.hal
+        required: true
+        schema:
+          type: string
 tags:
   -
     name: Endpoints
